# focus-folio

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  rag.py
frontend/: .env.example  .gitignore  PROJECT_INFO.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ConditionalFooter.tsx  CreateRoomModal.tsx  LandingPage.tsx  SignedInHome.tsx
frontend/app/components/dashboard/: EmptyState.tsx  RoomCard.tsx  RoomGrid.tsx
frontend/app/components/modals/: CreateRoomModal.tsx  DeleteConfirmDialog.tsx
frontend/app/lib/: api.ts  types.ts  utils.ts
frontend/app/room/[roomId]/: layout.tsx  page.tsx
frontend/app/room/[roomId]/components/: ChatPanel.tsx  ExamPanel.tsx  FlashcardsPanel.tsx  PdfViewer.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
