[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "svix>=1.98.0",
]
