[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-pinecone>=0.2.0",
    "pinecone>=6.0.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "svix>=1.98.0",
]
